added health check GET method (checkHealth operation)
